--- a/osam-api/requirements.txt
+++ b/osam-api/requirements.txt
@@ -1,4 +1,61 @@
+# ============================================
+# WEB FRAMEWORK
+# ============================================
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
-python-dotenv==1.0.0
+python-multipart==0.0.6
+
+# ============================================
+# DATA VALIDATION & SERIALIZATION
+# ============================================
 pydantic==2.5.3
+pydantic-settings==2.1.0
+
+# ============================================
+# DATABASE & ORM
+# ============================================
+sqlalchemy==2.0.23
+alembic==1.13.0
+pymysql==1.1.0
+cryptography==41.0.7
+
+# ============================================
+# AUTHENTICATION & SECURITY
+# ============================================
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.1.1
+PyJWT==2.10.1
+
+# ============================================
+# UTILITIES
+# ============================================
+python-dotenv==1.0.0
+requests==2.31.0
+httpx==0.25.2
+
+# ============================================
+# DEVELOPMENT & TESTING
+# ============================================
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+
+# ============================================
+# CODE QUALITY
+# ============================================
+black==23.12.1
+flake8==6.1.0
+isort==5.13.2
+mypy==1.7.1
+
+# ============================================
+# LOGGING & MONITORING
+# ============================================
+python-json-logger==2.0.7
+
+# ============================================
+# OPTIONAL: REDIS CACHING
+# ============================================
+# redis==5.0.1
+# aioredis==2.0.1
